--- a/Shield/app/src/main/AndroidManifest.xml
+++ b/Shield/app/src/main/AndroidManifest.xml
@@ -35,23 +35,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shield">
-        <activity android:name=".ui.signup.SignupActivity" />
-        <activity android:name=".ui.intro.IntroActivity" />
-        <activity android:name=".ui.splash.SplashActivity" />
-        <activity
-            android:name=".ui.home.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.Shield.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+        <activity android:name=".ui.signup.SignupActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.intro.IntroActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.splash.SplashActivity" android:screenOrientation="portrait"/>
 <!--        <activity-->
-<!--            android:name=".ui.main.TabbedMainActivity"-->
+<!--            android:name=".ui.home.MainActivity"-->
 <!--            android:label="@string/app_name"-->
 <!--            android:screenOrientation="portrait"-->
 <!--            android:theme="@style/Theme.Shield.NoActionBar">-->
@@ -61,6 +49,18 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
 <!--        </activity>-->
+
+        <activity
+            android:name=".ui.main.TabbedMainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Shield.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".ui.settings.SettingsActivity"
