--- a/Shield/app/build.gradle
+++ b/Shield/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.github.clans:fab:1.6.4'
 
     implementation 'com.google.code.gson:gson:2.8.7'
 //    implementation project(path: ':ble')
