--- a/Shield/app/src/main/AndroidManifest.xml
+++ b/Shield/app/src/main/AndroidManifest.xml
@@ -35,23 +35,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shield">
-        <activity android:name=".ui.signup.SignupActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.signup.SignUpActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.intro.IntroActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.splash.SplashActivity" android:screenOrientation="portrait"/>
-<!--        <activity-->
-<!--            android:name=".ui.home.MainActivity"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:theme="@style/Theme.Shield.NoActionBar">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
 
         <activity
-            android:name=".ui.main.TabbedMainActivity"
+            android:name=".ui.home.TabbedMainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Shield.NoActionBar">
@@ -64,11 +53,11 @@
 
         <activity
             android:name=".ui.settings.SettingsActivity"
-            android:parentActivityName=".ui.home.MainActivity"
+            android:parentActivityName=".ui.home.TabbedMainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.home.MainActivity" />
+                android:value=".ui.home.TabbedMainActivity" />
         </activity>
 
         <service
