--- a/Shield/app/build.gradle
+++ b/Shield/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.github.clans:fab:1.6.4'
-
+    implementation 'net.danlew:android.joda:2.10.12.2'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation project(path: ':ble')
 
