--- a/Shield/app/src/main/AndroidManifest.xml
+++ b/Shield/app/src/main/AndroidManifest.xml
@@ -35,10 +35,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shield">
-        <activity android:name=".ui.signup.SignUpActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ui.intro.IntroActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ui.splash.SplashActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.home.tabs.friends.ShowBarcodeActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".ui.home.TabbedMainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.home.TabbedMainActivity" />
 
+        </activity>
+        <activity
+            android:name=".ui.signup.SignUpActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.intro.IntroActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.splash.SplashActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.home.TabbedMainActivity"
             android:label="@string/app_name"
@@ -50,7 +63,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:parentActivityName=".ui.home.TabbedMainActivity"
@@ -63,7 +75,6 @@
         <service
             android:name=".service.ShieldService"
             android:label="Shield Service" />
-
         <service
             android:name=".service.ShieldNotifications"
             android:exported="false">
@@ -72,13 +83,16 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".receiver.SystemBootReceiver" android:enabled="true" android:exported="true">
+        <receiver
+            android:name=".receiver.SystemBootReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.USER_PRESENT"/>
-                <action android:name="android.intent.action.REBOOT"/>
-                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.REBOOT" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
 
