--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ tf-model/.ipynb_checkpoints/
 tf-model/Sample Model.ipynb
 tflite-test/
 instructions/
+/docs/res/avatars/cartoon-people-face-masks-young-men-women-characters-isolated-set-white-background
+/docs/res/avatars/convenience-store-with-woman-seller-counter-people-queue
+/docs/res/avatars/group-people-wearing-protective-face-masks-patterned-background
+/docs/res/avatars/group-women-face-masks
+/docs/res/avatars/stewardess-check-tickets-tourists
+/docs/res/avatars/travelers-airport-waiting-room-tourists-face-masks-with-luggage
+/docs/res/avatars/avatar.ai
