--- a/Shield/app/src/main/AndroidManifest.xml
+++ b/Shield/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/Theme.Shield">
         <activity android:name=".ui.home.tabs.friends.ShowBarcodeActivity"
             android:screenOrientation="portrait"
