--- a/Shield/app/src/main/AndroidManifest.xml
+++ b/Shield/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.nova.android.shield">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -80,6 +81,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.home.TabbedMainActivity" />
         </activity>
+
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/zxing_CaptureTheme"
+            tools:replace="screenOrientation" />
 
         <service
             android:name=".service.ShieldService"
