--- a/Shield/app/build.gradle
+++ b/Shield/app/build.gradle
@@ -11,9 +11,10 @@ android {
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
-        versionName "1.0"
+        versionName '1.0.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionNameSuffix '-alpha'
     }
 
     buildTypes {
