--- a/Shield/app/build.gradle
+++ b/Shield/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionName '1.0.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        versionNameSuffix '-alpha'
+        versionNameSuffix '-beta'
     }
 
     buildTypes {
